# 8051-simulator

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  test-linux.yml  test-windows.yml
examples/: mov_test.asm  test.asm
src/: alu.cppm  cpu.cppm  flag_register.cppm  instruction.cppm  io.cppm  logger.cppm  main.cpp  memory.cppm  memory_bus.cppm  register16.cppm  register8.cppm  registers.cppm  system.cppm
src/assembler/: assembler.cppm  encoder.cppm  parser.cppm  tokenizer.cppm
src/cpu/: cpu.cppm  cpu_alu.cppm  cpu_context.cppm  cpu_dispatcher.cppm  cpu_fetcher.cppm  cpu_impl.cpp  cpu_impl.cppm  cpu_interface.cppm  cpu_registers.cppm
src/instructions/: alu.cppm  data.cppm
src/registers/: flag_register.cppm  register16.cppm  register8.cppm
tests/: test_alu.cpp  test_assembler_tokenizer.cpp  test_cpu.cpp  test_cpu_add.cpp  test_cpu_addc.cpp  test_cpu_inc.cpp  test_cpu_mov.cpp  test_cpu_sjmp.cpp  test_flag_register.cpp  test_logger.cpp  test_memory.cpp  test_memory_bus.cpp  test_memory_ram.cpp  test_memory_rom.cpp  test_register.cpp  test_register16.cpp  test_register8.cpp  test_system.cpp
